# biOps

./: ChangeLog  DESCRIPTION  NAMESPACE  README  configure  configure.ac
R/: advEdgeDetection.R  arithmetics.R  convolution.R  crop.R  edge_detection.R  fft_filters.R  fft_filters.R.in  fft_funcs.R  fft_funcs.R.in  filter.R  imagedata.R  isodata.R  jpeg.R  jpeg.R.in  kmeans.R  logics.R  luts.R  minification.R  mirroring.R  morphologic.R  noise_gen.R  rotate.R  scale.R  tiff.R  tiff.R.in  translation.R  utils.R  zzz.R
data/: logo.RData
man/: biOps-package.Rd  imageType.Rd  imagedata.Rd  imgAND.Rd  imgAdd.Rd  imgAverage.Rd  imgAverageShrink.Rd  imgBilinearRotate.Rd  imgBilinearScale.Rd  imgBinaryClosing.Rd  imgBinaryDilation.Rd  imgBinaryErosion.Rd  imgBinaryOpening.Rd  imgBlockMedianFilter.Rd  imgBlueBand.Rd  imgBlur.Rd  imgBoost.Rd  imgCanny.Rd  imgConvolve.Rd  imgCrop.Rd  imgCubicRotate.Rd  imgCubicScale.Rd  imgDecreaseContrast.Rd  imgDecreaseIntensity.Rd  imgDiffer.Rd  imgDifferenceEdgeDetection.Rd  imgDivide.Rd  imgEKMeans.Rd  imgFFT.Rd  imgFFTBandPass.Rd  imgFFTBandStop.Rd  imgFFTConvolve.Rd  imgFFTHighPass.Rd  imgFFTInv.Rd  imgFFTLowPass.Rd  imgFFTPhase.Rd  imgFFTShift.Rd  imgFFTSpectrum.Rd  imgFFTiShift.Rd  imgFreiChen.Rd  (+81 more)
src/: Makevars.in  Makevars.win  arithmetics.c  canny.c  config.h  config.h.in  convolution.c  crop.c  defs.h  edge_detection.c  fft_filters.c  fft_funcs.c  filter.c  gaussian.c  gaussian.h  interpolation.c  interpolation.h  isodata.c  isodata_cluster.c  isodata_cluster.h  jpegio.c  kdtree.c  kdtree.h  kmeans.c  kmeans_enhanced.c  logics.c  (+14 more)
(+10 files in other folders)
